# VerText

./: CMakeLists.txt  LICENSE  README.md
runtime/meta/: metadata.json
runtime/versions/.Trash-1000.trashinfo.AKXEH3_versions/: v1_1765797089
runtime/versions/test.txt.trashinfo.BXK7G3_versions/: v2_1765797062
runtime/versions/test.txt_versions/: v1_1765796814
scripts/: mount.sh  run_tui.sh  setup.sh  test_versioning.sh  unmount.sh
src/common/: paths.cpp  paths.h
src/fuse/: version_manager.cpp  version_manager.h  vfs_main.cpp  vfs_ops.cpp  vfs_ops.h
src/tui/: tui_main.cpp  tui_manager.cpp  tui_manager.h
